# Fraud-Detection-Web-App

./: README.md  grid_search_results.txt  main.py  pyproject.toml  replit.nix  requirements.txt
Model/: dt_model.pkl  lr_model.pkl  xgb_model.pkl
static/JSON/: fraud-detection-957ce-firebase-adminsdk-2b8nl-ba0a210d0a.json
static/guide/: Panduan.txt  Prosedur Pengoperasian.txt
static/javascript/: script.js
static/styles/: df.css  info_data.css  loading.css  sidebar-scorllbar.css  style.css
templates/: cek_nan.html  df.html  index.html  info_data.html  konten.html  tuning.html  upload_model.html
