[tool.poetry]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10.0,<3.12"
seaborn = "^0.13.2"
pandas = "^2.2.2"
tabulate = "^0.9.0"
matplotlib = "^3.8.4"
numpy = "^1.26.4"
pyngrok = "^7.1.6"
scikit-learn = "^1.4.2"
werkzeug = "^3.0.3"
xgboost = "^2.0.3"
flask = "^3.0.3"
flask-socketio = "^5.3.6"
pymongo = "^4.7.2"
firebase-admin = "^6.5.0"
shap = "^0.46.0"
scipy = "^1.14.0"

[tool.pyright]
# https://github.com/microsoft/pyright/blob/main/docs/configuration.md
useLibraryCodeForTypes = true
exclude = [".cache"]

[tool.ruff]
# https://beta.ruff.rs/docs/configuration/
select = ['E', 'W', 'F', 'I', 'B', 'C4', 'ARG', 'SIM']
ignore = ['W291', 'W292', 'W293']

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"